--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/oshogun/dogoo">View on GitHub</a>
 
-          <h1 id="project_title">Dogoo</h1>
-          <h2 id="project_tagline">A Roguelike game.</h2>
+          <h1 id="project_title">Dogoo: Conscience Crisis</h1>
+          <h2 id="project_tagline">A Roguelike game inspired by an uncertain future. [coming soon]</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/oshogun/dogoo/zipball/master">Download this project as a .zip file</a>
@@ -32,11 +32,18 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a id="welcome-to-dogoo" class="anchor" href="#welcome-to-dogoo" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to Dogoo!!</h3>
+<a id="welcome-to-dogoo" class="anchor" href="#welcome-to-dogoo" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to Dogoo.</h3>
 
-<p>Dogoo is an RPG being developed by <a href="https://github.com/oshogun" class="user-mention">@oshogun</a>, in the C++ Programming Language, and it is completely free to play and open source. It is a game unlike <strong>anything you have played before</strong>, <em>except maybe for Rogue, Nethack, IVAN...</em></p>
+<p>Computers proccess data, which are effectively the manipulation of electric signals that are abstracted in such a way that they can represent 
+meaningful information. The human brain effectively does the same. Those signals of course are meaningless unless there's a *processor*
+that is capable of give them meaning. But what if it was possible to backup all the data that represent's a person's conscience to a computer?</p>
 
-<p><img src="images/teaser.png" alt="Screenshot may not be representative of final product" class="inline"></p>
+<p>What if science knew enough about the human brain so that a processor capable of working exactly like a brain could be developed? Would 
+that be a means to achieve immortality? Would the new conscience, now living inside a machine, be the same person as the original? Or
+just an exact copy? </p>
+<p>
+These questions are brought into light in this epic sci-fi fantasy adventure roguelike, under development by Doggo Software studios.</p>
+
       </section>
     </div>
 
